--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     /* ─── NEON BORDER ─── */
     .card {
       position: relative;
-      width: 420px;           /* ↑ a bit wider */
-      padding: 50px 40px;     /* ↑ more padding for height */
+      width: 460px;           /* ↑ now 460px */
+      padding: 60px 50px;     /* ↑ more padding */
       border-radius: 16px;
       background: var(--card-bg);
-      box-shadow: 0 0 16px rgba(0,0,0,0.7);
+      box-shadow: 0 0 20px rgba(0,0,0,0.8);
       text-align: center;
       overflow: hidden;
     }
@@ -59,29 +59,29 @@
 
     /* ─── HEADERS ─── */
     .card h1 {
-      font-size: 2.4rem;
-      margin-bottom: 6px;
+      font-size: 2.6rem;
+      margin-bottom: 8px;
       color: var(--accent-yellow);
       text-shadow:
-        0 0 4px var(--accent-yellow),
-        0 0 10px var(--accent-yellow);
+        0 0 6px var(--accent-yellow),
+        0 0 12px var(--accent-yellow);
       letter-spacing: .2em;
     }
     .card h2 {
-      font-size: 1rem;
-      margin-bottom: 28px;
+      font-size: 1.1rem;
+      margin-bottom: 32px;
       color: var(--accent-red);
-      opacity: 0.8;
+      opacity: 0.9;
     }
 
     /* ─── SPINNER ─── */
     .spinner {
-      width: 50px;            /* ↑ slightly larger */
-      height: 50px;
+      width: 60px;            /* ↑ larger */
+      height: 60px;
       border: 6px solid rgba(255,65,54,0.4);
       border-top-color: var(--accent-yellow);
       border-radius: 50%;
-      margin: 0 auto 36px;    /* ↑ more spacing */
+      margin: 0 auto 40px;    /* ↑ spacing */
       animation: spin 0.9s linear infinite;
     }
     @keyframes spin { to { transform: rotate(360deg); } }
@@ -90,38 +90,38 @@
     .grid {
       display: grid;
       grid-template-columns: repeat(3,1fr);
-      gap: 14px;
-      margin-bottom: 36px;    /* ↑ more spacing */
+      gap: 16px;
+      margin-bottom: 40px;    /* ↑ spacing */
     }
     .grid button {
-      padding: 12px 0;        /* adjust vertical padding */
+      padding: 14px 0;        /* ↑ vertical padding */
       border: none;
       border-radius: 8px;
       background: linear-gradient(135deg, var(--accent-red), var(--accent-yellow));
       color: #05080f;
-      font-size: 0.95rem;     /* slightly bigger text */
+      font-size: 1rem;        /* ↑ font */
       font-weight: bold;
       cursor: pointer;
-      box-shadow: 0 0 8px rgba(255,215,0,0.5);
+      box-shadow: 0 0 10px rgba(255,215,0,0.6);
       transition: transform 0.2s, box-shadow 0.2s;
     }
     .grid button:hover {
       transform: translateY(-2px);
-      box-shadow: 0 0 16px rgba(255,65,54,0.8);
+      box-shadow: 0 0 20px rgba(255,65,54,0.9);
     }
     .grid i {
       display:block;
-      font-size:1.5rem;
+      font-size:1.6rem;
       margin-bottom:6px;
     }
 
     /* ─── PROGRESS BAR ─── */
     .progress-wrapper {
-      margin-bottom: 14px;
+      margin-bottom: 16px;
     }
     .progress-bar {
       width:100%;
-      height:10px;             /* ↑ slightly taller */
+      height:12px;            /* ↑ taller */
       background: rgba(255,255,255,0.1);
       border-radius:4px;
       overflow:hidden;
@@ -133,16 +133,16 @@
       transition: width 0.3s ease;
     }
     .progress-text {
-      margin-top:6px;
+      margin-top:8px;
       text-align:right;
-      font-size:0.9rem;       /* ↑ slightly larger */
+      font-size:1rem;         /* ↑ font */
       color:#bbb;
     }
 
     /* ─── FOOTER ─── */
     .footer {
-      margin-top:22px;
-      font-size:0.8rem;
+      margin-top:24px;
+      font-size:0.85rem;
       color:#777;
     }
   </style>
@@ -186,7 +186,6 @@
       pctText.textContent = pct + '%';
       if (pct >= 100) {
         clearInterval(timer);
-        // redirect when complete:
         window.location.href = 'https://binery555.github.io/loging-with-pagematcgesdiffer-/';
       }
     }, 40);
