--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Deriv Mini Trading Signal Tool</title>
+  <title>Deriv Mini Trading Tool</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
@@ -88,6 +88,7 @@
       max-width: 100%;
       margin: auto;
     }
+    .hidden { display: none; }
   </style>
 </head>
 <body>
@@ -144,8 +145,35 @@
   <audio id="alertSound" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg" preload="auto"></audio>
 
   <script>
-    const API_TOKEN = 'KsYMnJ8U7BJgklp';
-    const WS_URL = 'wss://ws.binaryws.com/websockets/v3?app_id=69656';
+    // ──────────────── OAUTH + TOKEN HANDLING ────────────────
+    const APP_ID       = '81018';
+    const REDIRECT_URI = window.location.origin + window.location.pathname;
+    const OAUTH_URL    = `https://oauth.deriv.com/oauth2/authorize?app_id=${APP_ID}&redirect_uri=${encodeURIComponent(REDIRECT_URI)}`;
+
+    (function handleOAuthCallback() {
+      const params = new URLSearchParams(window.location.search);
+      if (params.has('token1') && params.has('acct1')) {
+        localStorage.setItem('deriv_token', params.get('token1'));
+        localStorage.setItem('deriv_loginid', params.get('acct1'));
+        history.replaceState(null, '', REDIRECT_URI);
+      }
+    })();
+
+    const API_TOKEN = localStorage.getItem('deriv_token');
+    if (!API_TOKEN) window.location.href = OAUTH_URL;
+
+    // ──────────────── SIDEBAR ROUTING (if used) ────────────────
+    document.querySelectorAll('.sidebar-item')?.forEach(el => {
+      el.onclick = () => {
+        document.querySelectorAll('.sidebar-item').forEach(i => i.classList.remove('active'));
+        el.classList.add('active');
+        document.querySelectorAll('[id^="content-"]').forEach(c => c.classList.add('hidden'));
+        document.getElementById('content-' + el.dataset.section).classList.remove('hidden');
+      };
+    });
+
+    // ──────────────── Trading Logic ────────────────
+    const WS_URL = 'wss://ws.binaryws.com/websockets/v3?app_id=81018';
     const markets = ['R_10', 'R_25', 'R_50', 'R_75', 'R_100', 'R_10_1s', 'R_25_1s', 'R_50_1s', 'R_75_1s', 'R_100_1s'];
     const marketSelect = document.getElementById('marketSelect');
     markets.forEach(m => marketSelect.append(new Option(m, m)));
@@ -203,16 +231,12 @@
       ws = new WebSocket(WS_URL);
       ws.onopen = () => {
         ws.send(JSON.stringify({ authorize: API_TOKEN }));
-        subscribe();
+        ws.send(JSON.stringify({ ticks: marketSelect.value }));
       };
       ws.onmessage = ({ data }) => {
         const msg = JSON.parse(data);
         if (msg.tick) updateData(msg.tick);
       };
-    }
-
-    function subscribe() {
-      ws.send(JSON.stringify({ ticks: marketSelect.value }));
     }
 
     function updateData(tick) {
@@ -229,7 +253,6 @@
       rsiData.push(rsi);
 
       updateCharts(price, time, rsi);
-      autoAnalyze(price, rsi);
     }
 
     function calculateRSI(data, period = 14) {
@@ -253,36 +276,6 @@
       rsiChart.data.labels = timeLabels;
       rsiChart.data.datasets[0].data = rsiData;
       rsiChart.update();
-    }
-
-    function autoAnalyze(price, rsi) {
-      if (priceData.length < 20) return;
-
-      const recentPrices = priceData.slice(-5);
-      const avg = recentPrices.reduce((a, b) => a + b) / 5;
-      let signal = null, conf = 0, duration = 5;
-
-      if (rsi < 30 && price < avg) { signal = 'Buy'; conf = 5; duration = 3; }
-      else if (rsi < 40 && price < avg) { signal = 'Buy'; conf = 4; duration = 2; }
-      else if (rsi < 50 && price < avg) { signal = 'Buy'; conf = 2; duration = 1; }
-      else if (rsi > 70 && price > avg) { signal = 'Sell'; conf = 5; duration = 3; }
-      else if (rsi > 60 && price > avg) { signal = 'Sell'; conf = 4; duration = 2; }
-      else if (rsi > 55 && price > avg) { signal = 'Sell'; conf = 2; duration = 1; }
-
-      if (signal) {
-        const stopLoss = signal === 'Buy' ? price - 0.3 : price + 0.3;
-        publishSignal(signal, conf, price, stopLoss, duration);
-      }
-    }
-
-    function publishSignal(signal, conf, entry, stopLoss, duration) {
-      const now = new Date().toLocaleTimeString();
-      const market = marketSelect.value;
-      document.getElementById('signal').innerHTML = `<span style="color:${signal === 'Buy' ? '#0f0' : '#f00'}">${signal} (${conf} Conf)</span>`;
-      document.getElementById('signalStrength').innerText = `${conf} Conformation`;
-      document.getElementById('alertSound').play();
-
-      entryMarkers.push({ x: now, y: entry });
     }
 
     function fetchBalanceAndCR() {
@@ -329,7 +322,6 @@
 
       wsTrade.onmessage = (msg) => {
         const data = JSON.parse(msg.data);
-
         if (data.msg_type === 'authorize') {
           wsTrade.send(JSON.stringify(buyRequest));
         } else if (data.msg_type === 'buy') {
@@ -382,12 +374,10 @@
     document.getElementById("riseBtn").onclick = () => {
       purchaseRiseFall("RISE");
     };
-
     document.getElementById("fallBtn").onclick = () => {
       purchaseRiseFall("FALL");
     };
 
-    // Initial balance fetch
     fetchBalanceAndCR();
   </script>
 </body>
